--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,14 +1,16 @@
 
 <div class="login">
   <div class="spacer">
-    <input type="text" placeholder="email" [(ngModel)]="email">
+    <input type="text" placeholder="email" [(ngModel)]="userData.email">
   </div>
   <div class="spacer">
-    <input type="password" placeholder="password" [(ngModel)]="password" class=""/>
+    <input type="password" placeholder="password" [(ngModel)]="userData.password" class=""/>
   </div>
   <button (click)="getUserSignInPost()">CLICK ME</button>
   <div class="spacer">
 
+    <p>{{userData.email}}</p>
+    <p>{{userData.password}}</p>
   </div>
 </div>
 
@@ -16,6 +18,7 @@
 <div class="login">
 <!--<p>{{otvetString}}</p>-->
 <p>{{getTestText}}</p>
+<p>{{userError.email + userError.password}}</p>
 </div>
 
 
