--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -2,11 +2,9 @@
   padding: .5em 1em;
   border: 1px dashed #ccc;
   width: 50%;
-  height: 30%;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
-  margin-top: auto;
-
   background-color: #f4f4ff;
   word-wrap:break-word;
 }
