--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,19 +5,18 @@
   </div>
   <div class="spacer">
     <input type="password" placeholder="password" [(ngModel)]="password" class=""/>
-
   </div>
-  <button (click)="apiAuth(email,password)">CLICK ME</button>
-  <button (click)="pressTestShowBar('privet')">SHOW BAR</button>
+  <button (click)="apiAuth(email,password)">Sign in</button>
+  <button (click)="checkToken()">check Token</button>
   <div class="spacer">
-
 
   </div>
 </div>
 
-
 <div class="login">
-<!--<p>{{otvetString}}</p>-->
-
+  <div class="spacer">
+<p>token: {{token}}</p>
+<p>refreshToken: {{refreshToken}}</p>
+  </div>
 </div>
 
