--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,35 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>doc1</title>
+</head>
+<body>
+<div class="header">
+  <h1>LIBRARY</h1>
+  <div class="hamburger-menu">
+    <input id="menu__toggle" type="checkbox" />
+    <label class="menu__btn" for="menu__toggle">
+      <span></span>
+    </label>
+    <ul class="menu__box">
+      <li><a class="menu__item" href="http://localhost:4200/">Главная</a></li>
+      <li><a class="menu__item" href="#">Книги</a></li>
+      <li><a class="menu__item" href="#">Авторы</a></li>
+      <li><a class="menu__item" href="#">Контакты</a></li>
+      <li><a class="menu__item" href="/login">Вход</a></li>
+    </ul>
+  </div>
+
+</div>
+
 <router-outlet></router-outlet>
+</body>
+
+
+</html>
+
+
