--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,22 +1,18 @@
-
-<div class="login">
-  <div class="spacer">
-    <input type="text" placeholder="email" [(ngModel)]="email">
+<div class="back-login-form">
+  <div class="login-form">
+    <input class="form-input" type="text" placeholder="email" [(ngModel)]="email">
+    <input class="form-input" type="password" placeholder="password" [(ngModel)]="password"/>
+    <button class="form-input" (click)="apiAuth(email,password)">Sign in</button>
+    <button class="form-input" (click)="checkToken()">check Token</button>
   </div>
-  <div class="spacer">
-    <input type="password" placeholder="password" [(ngModel)]="password" class=""/>
-  </div>
-  <button (click)="apiAuth(email,password)">Sign in</button>
-  <button (click)="checkToken()">check Token</button>
-  <div class="spacer">
-
+  <div class="info_footer">
+    <p>token: {{token}}</p>
+    <p>refreshToken: {{refreshToken}}</p>
   </div>
 </div>
-
 <div class="login">
   <div class="spacer">
-<p>token: {{token}}</p>
-<p>refreshToken: {{refreshToken}}</p>
+
   </div>
 </div>
 
