--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
     </label>
     <ul class="menu__box">
       <li><a class="menu__item" href="http://localhost:4200/">Главная</a></li>
-      <li><a class="menu__item" href="#">Книги</a></li>
+      <li><a class="menu__item" href="/books">Книги</a></li>
       <li><a class="menu__item" href="#">Авторы</a></li>
       <li><a class="menu__item" href="#">Контакты</a></li>
       <li><a class="menu__item" href="/login">Вход</a></li>
