--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,16 +11,18 @@
 <div class="header">
   <h1>LIBRARY</h1>
   <div class="hamburger-menu">
-    <input id="menu__toggle" type="checkbox" />
+    <input id="menu__toggle" type="checkbox"/>
     <label class="menu__btn" for="menu__toggle">
       <span></span>
     </label>
     <ul class="menu__box">
+      <li *ngIf="getLoggedInStatus()"><a class="menu__item" href="/login">Вход</a></li>
+      <li *ngIf="getLoggedInStatus()"><a class="menu__item" href="/register">Регистрация</a></li>
       <li><a class="menu__item" href="http://localhost:4200/">Главная</a></li>
       <li><a class="menu__item" href="/books">Книги</a></li>
       <li><a class="menu__item" href="#">Авторы</a></li>
       <li><a class="menu__item" href="#">Контакты</a></li>
-      <li><a class="menu__item" href="/login">Вход</a></li>
+      <li *ngIf="!getLoggedInStatus()"><a class="menu__item" (click)="logout()" href="#">Выход</a></li>
     </ul>
   </div>
 
