--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,20 +30,22 @@
       <div *ngIf="getLoggerInWorker">
         <div class="mainMenu">
           <ul>
-            <li><a class="menu__item" href="#">Пункт 1</a>
+            <li><a  class="menu__item" href="#">Пункт 1 »»»</a>
             <ul class="submenu">
               <li><a href="#">Подпункт</a></li>
               <li><a href="#">Подпункт</a></li>
               <li><a href="#">Подпункт</a></li>
             </ul>
             </li>
-          <li><a href="#">Пункт 2</a>
-          <ul class="submenu">
-            <li><a href="#">Подпункт</a></li>
-            <li><a href="#">Подпункт</a></li>
-            <li><a href="#">Подпункт</a></li>
-          </ul>
-          </li>
+            <li><a class="menu__item" href="#">Пункт 2 »»»</a>
+              <ul class="submenu">
+                <li><a href="#">Подпункт</a></li>
+                <li><a href="#">Подпункт</a></li>
+                <li><a href="#">Подпункт</a></li>
+              </ul>
+            </li>
+
+
           </ul>
         </div>
         <!--        </nav>-->
