--- a/src/app/ui/books/books-list/books.component.html
+++ b/src/app/ui/books/books-list/books.component.html
@@ -3,7 +3,7 @@
     <div class="books_child">
       <p>Название: {{item.bookTitle}}</p>
       <p>Жанр: {{item.genreCode}}</p>
-      <p>Дата выхода: {{item.releaseDate}}</p>
+      <p>Дата выхода: {{item.bookReleaseDate}}</p>
 <!--      <p>{{item.}}</p>-->
 <!--      <p>Серия: {{item.series}}</p>-->
 <!--      <p>Перевод: {{item.translation}}</p>-->
