--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,38 +12,60 @@
 <div class="header">
   <h1>LIBRARY</h1>
   <div (click)="getLoggerInUserRole()" class="hamburger-menu">
-    <input id="menu__toggle" type="checkbox"/>
+    <input id="menu__toggle" type="checkbox" />
     <label class="menu__btn" for="menu__toggle">
       <span></span>
     </label>
     <ul class="menu__box">
       <li *ngIf="getLoggedInStatus()"><a class="menu__item" href="/login">Вход</a></li>
       <li *ngIf="getLoggedInStatus()"><a class="menu__item" href="/register">Регистрация</a></li>
-      <li><a class="menu__item" href="http://localhost:4200/">Главная</a></li>
-      <li><a class="menu__item" href="/books">Книги</a></li>
+      <li><a class="menu__item" href="/index">Главная</a></li>
+      <li><a class="menu__item" href="/books-list">Книги</a></li>
       <li><a class="menu__item" href="#">Авторы</a></li>
       <li><a class="menu__item" href="#">Контакты</a></li>
       <li *ngIf="!getLoggedInStatus()"><a class="menu__item" (click)="logout()" href="#">Выход</a></li>
+      <li *ngIf="!getLoggedInStatus()"><a class="menu__item" href="/promo_code">Ввести промокод</a></li>
       <div *ngIf="getLoggerInUser">
-        <li><a class="menu__item" href="#">ROLE_USER</a></li>
+        <div class="mainMenu">
+          <ul>
+            <li><a class="menu__item" href="#">Обо мне</a>
+              <ul class="submenu">
+                <li><a>Мой профиль</a></li>
+                <li><a>Мои книги</a></li>
+<!--                <li><a href="#">Служба поддержки</a></li>-->
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
       <div *ngIf="getLoggerInWorker">
         <div class="mainMenu">
           <ul>
-            <li><a  class="menu__item" href="#">Пункт 1 »»»</a>
-            <ul class="submenu">
-              <li><a href="#">Подпункт</a></li>
-              <li><a href="#">Подпункт</a></li>
-              <li><a href="#">Подпункт</a></li>
-            </ul>
-            </li>
-            <li><a class="menu__item" href="#">Пункт 2 »»»</a>
+            <li><a class="menu__item">Меню работника</a>
               <ul class="submenu">
-                <li><a href="#">Подпункт</a></li>
-                <li><a href="#">Подпункт</a></li>
-                <li><a href="#">Подпункт</a></li>
+                <li><a href="/create-book">Добавить книгу</a></li>
+                <li><a>Редактирование книг</a></li>
+                <li><a href="/create-authors">Добавить автора</a></li>
+                <li><a >Редактировать автора</a></li>
+                <li><a >Удалить автора</a></li>
+                <li><a href="book/series">Серия книг</a></li>
+<!--                <li><a routerLink="book/genre" href="">Жанры</a></li>-->
+                <li><a href="book/genre" >Жанры</a></li>
+                <li><a href="book/age-limit">Возрастные ограничения</a></li>
+                <li><a href="book/translation">Перевод книг</a></li>
+                <li><a >Аренда</a></li>
+                <li><a href="book/cover-type">Виды обложек</a></li>
+                <li><a href="book/publisher">Издательства</a></li>
+                <li><a href="book/edition-language">Язык издания</a></li>
               </ul>
             </li>
+<!--            <li><a class="menu__item" href="#">Меню работника 2</a>-->
+<!--              <ul class="submenu">-->
+<!--                <li><a href="#">Подпункт</a></li>-->
+<!--                <li><a href="#">Подпункт</a></li>-->
+<!--                <li><a href="#">Подпункт</a></li>-->
+<!--              </ul>-->
+<!--            </li>-->
 
 
           </ul>
@@ -52,7 +74,17 @@
       </div>
 
       <div *ngIf="getLoggerInAdmin">
-        <li><a class="menu__item" href="/admin">ROLE_ADMIN</a></li>
+        <div class="mainMenu">
+          <ul>
+            <li><a class="menu__item" href="#">Меню администратора</a>
+              <ul class="submenu">
+                <li><a href="user/user-list" >Список пользователей</a></li>
+                <li><a >Изменение статуса пользователя</a></li>
+                <li><a >Удаление книг</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
       </div>
 
     </ul>
