--- a/src/app/ui/common_styles.css
+++ b/src/app/ui/common_styles.css
@@ -1,5 +1,5 @@
 .CommonParent{
-  background: #ffcfcf;
+  background: #b4e6ff;
   display: flex;
   justify-content: center;
   flex-direction: column;
