--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,7 +53,9 @@
                 <li><a href="book/genre" >Жанры</a></li>
                 <li><a href="book/age-limit">Возрастные ограничения</a></li>
                 <li><a href="book/translation">Перевод книг</a></li>
-                <li><a >Аренда</a></li>
+                <li><a href="book/rent">Список в аренде</a></li>
+                <li><a href="book/rent-add">Выдать в аренду</a></li>
+                <li><a href="book/create-price">Стоимость аренды</a></li>
                 <li><a href="book/cover-type">Виды обложек</a></li>
                 <li><a href="book/publisher">Издательства</a></li>
                 <li><a href="book/edition-language">Язык издания</a></li>
@@ -96,6 +98,8 @@
 
 </div>
 
+test
+<h1>Test</h1>
 <router-outlet></router-outlet>
 </body>
 
