--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="back-login-form">
   <div class="login-form">
     <input class="form-input" type="text" placeholder="email" [(ngModel)]="email">
-    <input class="form-input" type="password" placeholder="password" [(ngModel)]="password"/>
+    <input class="form-input" type="password" placeholder="password" required name="password"[(ngModel)]="password">
     <button class="form-input" (click)="apiAuth(email,password)">Sign in</button>
     <button class="form-input" (click)="checkToken()">check Token</button>
   </div>
