--- a/src/app/ui/books/create-book/create-book.component.html
+++ b/src/app/ui/books/create-book/create-book.component.html
@@ -4,13 +4,13 @@
     <p>Название книги</p>
     <input  class="form-input" type="text" placeholder="Name Book" [(ngModel)]="selectedBookTitle">
 <p>Автор</p>
-    <select  [(ngModel)]="selectedAuthors">
+    <select    [(ngModel)]="selectedAuthors">
       <option [value]="null">Не выбрано</option>
       <option *ngFor="let item of AuthorsName" [value]="item.authorsId">{{item.firstname}} {{item.lastname}} {{item.patronymic}} {{item.dateOfBirth}}</option>
     </select>
     <p>{{ selectedAuthors }}</p>
 <p>Жанр</p>
-    <select  [(ngModel)]="selectedGenres">
+    <select    [(ngModel)]="selectedGenres">
       <option [value]="null">Не выбрано</option>
       <option *ngFor="let item of bookGenresName" [value]="item.bookGenresId">{{item.genresName}}</option>
     </select>
@@ -70,7 +70,12 @@
     <p>{{ selectedTranslation }}</p>
 
 <p>Изображение книги</p>
-    <input  class="form-input" type="text" placeholder="Image Book"  [(ngModel)]="selectedImageId">
+<!--    <input  class="form-input" type="file" placeholder="ImageUploadedFile Book"  [(ngModel)]="selectedFile">-->
+
+    <input
+      type="file" (change)="onFileSelected($event)" >
+<!--    <button type="button" (click)="fileInput.click()">Pick File</button>-->
+
     <br>
     <div class="buttonCreateBook">
       <div>
