--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,98 +9,229 @@
 </head>
 <body>
 
-<div class="header">
-  <h1>LIBRARY</h1>
-  <div (click)="getLoggerInUserRole()" class="hamburger-menu">
-    <input id="menu__toggle" type="checkbox" />
-    <label class="menu__btn" for="menu__toggle">
-      <span></span>
-    </label>
-    <ul class="menu__box">
-      <li *ngIf="getLoggedInStatus()"><a class="menu__item" href="/login">Вход</a></li>
-      <li *ngIf="getLoggedInStatus()"><a class="menu__item" href="/register">Регистрация</a></li>
-      <li><a class="menu__item" href="/index">Главная</a></li>
-      <li><a class="menu__item" href="/books-list">Книги</a></li>
-      <li><a class="menu__item" href="#">Авторы</a></li>
-      <li><a class="menu__item" href="#">Контакты</a></li>
-      <li *ngIf="!getLoggedInStatus()"><a class="menu__item" (click)="logout()" href="#">Выход</a></li>
-      <li *ngIf="!getLoggedInStatus()"><a class="menu__item" href="/promo_code">Ввести промокод</a></li>
-      <div *ngIf="getLoggerInUser">
-        <div class="mainMenu">
-          <ul>
-            <li><a class="menu__item" href="#">Обо мне</a>
-              <ul class="submenu">
-                <li><a>Мой профиль</a></li>
-                <li><a>Мои книги</a></li>
-<!--                <li><a href="#">Служба поддержки</a></li>-->
-              </ul>
-            </li>
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">LIBRARY</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+<!--      <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
+
+      <ul class="navbar-nav flex">
+<!--      <ul class="navbar-nav mx-auto">-->
+
+        <li class="nav-item">
+          <a routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/index">Главная</a>
+        </li>
+
+        <li class="nav-item">
+          <a routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/books-list">Книги</a>
+        </li>
+        <li class="nav-item">
+          <a routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/link">Авторы</a>
+        </li>
+        <li class="nav-item">
+          <a routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/link">Контакты</a>
+        </li>
+        <li *ngIf="!getLoggedInStatus()" class="nav-item">
+          <a  routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/promo_code">Промокод</a>
+        </li>
+        <li  *ngIf="getLoggerInWorker" class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Меню работника
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a routerLinkActive="active" routerLink="/create-book" class="dropdown-item" href="#">Добавить книгу</a></li>
+            <li><a routerLinkActive="active" routerLink="/create-authors" class="dropdown-item" href="#">Добавить автора</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/genre/list" class="dropdown-item" href="#">Жанры</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/age-limit/list" class="dropdown-item" href="#">Возрастные ограничения</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/translation" class="dropdown-item" href="#">Перевод книг</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/series" class="dropdown-item" href="#">Серия книг</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/rent" class="dropdown-item" href="#">Список в аренде</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/rent-add" class="dropdown-item" href="#">Выдать в аренду</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/create-price" class="dropdown-item" href="#">Стоимость аренды</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/cover-type" class="dropdown-item" href="#">Виды обложек</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/publisher" class="dropdown-item" href="#">Издательства</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/edition-language" class="dropdown-item" href="#">Язык издания</a></li>
           </ul>
-        </div>
-      </div>
-      <div *ngIf="getLoggerInWorker">
-        <div class="mainMenu">
-          <ul>
-            <li><a class="menu__item">Меню работника</a>
-              <ul class="submenu">
-                <li><a href="/create-book">Добавить книгу</a></li>
-                <li><a>Редактирование книг</a></li>
-                <li><a href="/create-authors">Добавить автора</a></li>
-                <li><a >Редактировать автора</a></li>
-                <li><a >Удалить автора</a></li>
-                <li><a href="book/series">Серия книг</a></li>
-<!--                <li><a routerLink="book/genre" href="">Жанры</a></li>-->
-                <li><a href="book/genre" >Жанры</a></li>
-                <li><a href="book/age-limit">Возрастные ограничения</a></li>
-                <li><a href="book/translation">Перевод книг</a></li>
-                <li><a href="book/rent">Список в аренде</a></li>
-                <li><a href="book/rent-add">Выдать в аренду</a></li>
-                <li><a href="book/create-price">Стоимость аренды</a></li>
-                <li><a href="book/cover-type">Виды обложек</a></li>
-                <li><a href="book/publisher">Издательства</a></li>
-                <li><a href="book/edition-language">Язык издания</a></li>
-              </ul>
-            </li>
-<!--            <li><a class="menu__item" href="#">Меню работника 2</a>-->
-<!--              <ul class="submenu">-->
-<!--                <li><a href="#">Подпункт</a></li>-->
-<!--                <li><a href="#">Подпункт</a></li>-->
-<!--                <li><a href="#">Подпункт</a></li>-->
-<!--              </ul>-->
-<!--            </li>-->
-
-
+        </li>
+        <li  *ngIf="getLoggerInAdmin" class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Меню администратора
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
+            <li><a routerLinkActive="active" routerLink="/user/user-list" class="dropdown-item" href="#">Список пользователей</a></li>
+            <li><a routerLinkActive="active" routerLink="#" class="dropdown-item" href="#">Изменение статуса пользователя</a></li>
+            <li><a routerLinkActive="active" routerLink="/#" class="dropdown-item" href="#">Изменение статуса пользователя</a></li>
           </ul>
-        </div>
-        <!--        </nav>-->
+        </li>
+      </ul>
+
       </div>
+    </div>
 
-      <div *ngIf="getLoggerInAdmin">
-        <div class="mainMenu">
-          <ul>
-            <li><a class="menu__item" href="#">Меню администратора</a>
-              <ul class="submenu">
-                <li><a href="user/user-list" >Список пользователей</a></li>
-                <li><a >Изменение статуса пользователя</a></li>
-                <li><a >Удаление книг</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
+  <form class="d-flex justify-content-center">
+    <div class="d-none p-2 bg-primary text-white"> <p>{{getLoggerInUserRole()}}</p></div>
+    <button *ngIf="getLoggerInUser" type="button" class="btn btn-outline-dark"> Мой профиль </button>
+    <button (click)="logout()" *ngIf="getLoggerInUser" type="button" class="btn btn-outline-dark"> Выход </button>
+    <button routerLink="/login" *ngIf="!getLoggerInUser" type="button" class="btn btn-outline-dark"> Вход </button>
+    <button routerLink="/register" *ngIf="!getLoggerInUser" type="button" class="btn btn-outline-dark"> Регистрация </button>
+  </form>
+</nav>
 
-    </ul>
-
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="{{book[1].imageSrcTemp}}" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{{book[2].imageSrcTemp}}" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{{book[3].imageSrcTemp}}" class="d-block w-100" alt="...">
+    </div>
   </div>
-  <button (click)="checkStorage()"> check role</button>
-  <p>{{test}}</p>
-
-
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 
-test
-<h1>Test</h1>
 <router-outlet></router-outlet>
+
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-light text-muted">
+  <!-- Section: Social media -->
+  <section
+    class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
+  >
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Get connected with us on social networks:</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-google"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="" class="me-4 text-reset">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>Company name
+          </h6>
+          <p>
+            Here you can use rows and columns to organize your footer content. Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit.
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Products
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Angular</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">React</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Vue</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Laravel</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Useful links
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Pricing</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Settings</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Orders</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Help</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Contact
+          </h6>
+          <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            info@example.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+          <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2021 Copyright:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
+
 </body>
 
 
