--- a/src/app/ui/users/promocode/promocode.component.html
+++ b/src/app/ui/users/promocode/promocode.component.html
@@ -5,4 +5,4 @@
 <h3>IAMAADMIN - стать администратором</h3>
 <input  class="form-input" type="text" placeholder="promo code" [(ngModel)]="textInput" >
 <button (click)="sendPromoCode()">Отправить</button>
-<p>{{otvet}}</p>
+<p>{{response}}</p>
