--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -67,43 +67,13 @@ a:hover, a:focus{
 
 }
 
-
 .navbar-nav.flex{
   display: flex;
   flex-wrap: wrap;
 }
 
-.carousel-item{
-  height: 300pt;
-  align-items: center;
-  justify-content: center;
-}
-.carousel-item img{
-  margin-top: 20pt;
-  height: 250pt;
-  width: 200pt !important;
-  margin-left: auto;
-  margin-right: auto;
-  opacity: 0.3;
-}
-.carousel{
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
+.text-reset:hover{
+  background-color: transparent;
+  border-bottom: 3pt solid rgba(255, 0, 0, 0.52);
 }
 
-.carousel-item img:hover{
-  opacity: 0.8;
-}
-
-.carousel-control-next{
-  background-color: rgba(0, 0, 0, 0.28);
-}
-.carousel-control-prev{
-  background-color: rgba(0, 0, 0, 0.28);
-}
-
-.carousel{
-  margin-top: 20pt !important;
-  margin-bottom: 20pt;
-}
