--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">LIBRARY</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <!--      <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
 
@@ -38,7 +38,7 @@
         <li *ngIf="!getLoggedInStatus()" class="nav-item">
           <a  routerLinkActive="active" class="nav-link" aria-current="page" routerLink="/promo_code">Промокод</a>
         </li>
-        <li  *ngIf="getLoggerInWorker" class="nav-item dropdown">
+        <li *ngIf="token.getRole()+''==userService.getRoleWorker()||token.getRole()+''== userService.getRoleAdmin()"  class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Меню работника
           </a>
@@ -57,7 +57,7 @@
             <li><a routerLinkActive="active" routerLink="/book/edition-language" class="dropdown-item" href="#">Язык издания</a></li>
           </ul>
         </li>
-        <li  *ngIf="getLoggerInAdmin" class="nav-item dropdown">
+        <li  *ngIf="token.getRole()+''==userService.getRoleAdmin()" class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Меню администратора
           </a>
@@ -73,35 +73,13 @@
     </div>
 
   <form class="d-flex justify-content-center">
-    <div class="d-none p-2 bg-primary text-white"> <p>{{getLoggerInUserRole()}}</p></div>
-    <button *ngIf="getLoggerInUser" type="button" class="btn btn-outline-dark"> Мой профиль </button>
-    <button (click)="logout()" *ngIf="getLoggerInUser" type="button" class="btn btn-outline-dark"> Выход </button>
-    <button routerLink="/login" *ngIf="!getLoggerInUser" type="button" class="btn btn-outline-dark"> Вход </button>
-    <button routerLink="/register" *ngIf="!getLoggerInUser" type="button" class="btn btn-outline-dark"> Регистрация </button>
+<!--    <div class="d-none p-2 bg-primary text-white"> <p>{{getLoggerInUserRole()}}</p></div>-->
+    <button routerLink="/profile" *ngIf="!getLoggedInStatus()" type="button" class="btn btn-outline-dark"> Мой профиль </button>
+    <button (click)="token.logOut()" *ngIf="!getLoggedInStatus()" type="button" class="btn btn-outline-dark"> Выход </button>
+    <button routerLink="/login" *ngIf="getLoggedInStatus()" type="button" class="btn btn-outline-dark"> Вход </button>
+    <button routerLink="/register" *ngIf="getLoggedInStatus()" type="button" class="btn btn-outline-dark"> Регистрация </button>
   </form>
 </nav>
-
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="{{book[1].imageSrcTemp}}" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{{book[2].imageSrcTemp}}" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="{{book[3].imageSrcTemp}}" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 
 <router-outlet></router-outlet>
 
@@ -113,32 +91,10 @@
   >
     <!-- Left -->
     <div class="me-5 d-none d-lg-block">
-      <span>Get connected with us on social networks:</span>
+
     </div>
     <!-- Left -->
 
-    <!-- Right -->
-    <div>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 text-reset">
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
-    <!-- Right -->
   </section>
   <!-- Section: Social media -->
 
@@ -151,11 +107,10 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3"></i>Company name
+            <i class="fas fa-gem me-3"></i>Library
           </h6>
           <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda ea enim excepturi expedita magni maiores, maxime nam omnis placeat, quidem, quis sequi tempore totam velit.
           </p>
         </div>
         <!-- Grid column -->
@@ -167,7 +122,7 @@
             Products
           </h6>
           <p>
-            <a href="#!" class="text-reset">Angular</a>
+            <a href="#" class="text-reset">Angular</a>
           </p>
           <p>
             <a href="#!" class="text-reset">React</a>
@@ -225,16 +180,15 @@
 
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-    © 2021 Copyright:
-    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+    © 2022 Copyright:
+    <a class="text-reset fw-bold" href="/index">Library</a>
   </div>
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
 
+
 </body>
-
-
 </html>
 
 
