--- a/src/app/ui/books/age-limit/age-limit-list/age-limit-list.component.html
+++ b/src/app/ui/books/age-limit/age-limit-list/age-limit-list.component.html
@@ -12,10 +12,10 @@
       <tbody *ngFor="let item of ageLimit; index as i">
       <tr>
         <th scope="row">{{item.ageLimitId}}</th>
-        <td *ngIf="enableEditIndex!=i">{{item.ageLimitName}}</td>
+        <td *ngIf="enableEditIndex!=i">{{item.coverCodeName}}</td>
         <td *ngIf="enableEditIndex==i" class="active" contenteditable="true">
-          <input type="text" class="form-control" placeholder="{{item.ageLimitName}}"
-                 [(ngModel)]="updateAgeLimit.ageLimitName">
+          <input type="text" class="form-control" placeholder="{{item.coverCodeName}}"
+                 [(ngModel)]="updateAgeLimit.coverCodeName">
         </td>
         <td *ngIf="enableEditIndex!=i" class="col-md-1 edit" (click)="enableEditMethod($event, i)">Изменить</td>
         <td *ngIf="enableEditIndex==i" class="col-md-1 cancel" (click)="cancel()">Отменить</td>
@@ -59,7 +59,42 @@
     </table>
   </div>
 
-  {{response}}
+  <div *ngIf="response">
+    {{response}}
+    <button *ngIf="errorDataBase" data-bs-toggle="modal" data-bs-target="#exampleModal2" class="btn btn-info"> Какой формат верный?</button>
+    <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel2">Информация</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+          </div>
+          <div class="modal-body">
+            <div class="alert alert-warning">
+              <li>Возрастное ограничение может содержать только цифры</li>
+              <li>Если возрастное ограничение имеет диапазон чисел, допустим между цифрами дефис и каждое число из диапазона должно содержать не более двух цифр</li>
+              <li>Если число не имеет диапазона должен быть знак "+" после числа</li>
+              <div class="alert alert-success"> Разрешено
+                <li> 16+ </li>
+                <li> 0-3 </li>
+                <li> 16-18 </li>
+              </div>
+              <div class="alert alert-danger"> Запрещено
+                <li> 12 </li>
+                <li> Десять </li>
+                <li> 16 18 </li>
+                <li> -9 </li>
+                <li> 100-150 </li>
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Понятно</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
