--- a/src/app/ui/books/genre/genre-list/genre-list.component.html
+++ b/src/app/ui/books/genre/genre-list/genre-list.component.html
@@ -54,8 +54,29 @@
 </table>
 </div>
 
+ <div *ngIf="help"> {{response}} <button *ngIf="!errorDataBase" data-bs-toggle="modal" data-bs-target="#exampleModal2" class="btn btn-info"> Какой формат верный?</button>
 
+  <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel2">Информация</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+        </div>
+        <div class="modal-body">
+          <div class="alert alert-warning">
+            <li>Жанр может содержать одно или два слова</li>
+            <li>Не допустим ввод цифр и спецсимволов</li>
+            <li>Допустим один пробел между словами</li>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Понятно</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
-
+</div>
 </div>
 
