--- a/src/app/ui/books/translation/translation.component.html
+++ b/src/app/ui/books/translation/translation.component.html
@@ -4,25 +4,25 @@
       <thead>
       <tr>
         <th scope="col">id</th>
-        <th scope="col">Тип обложки</th>
+        <th scope="col">Перевод</th>
         <th class="col-md-1" scope="col">Изменить</th>
         <th class="col-md-1" scope="col">Удалить</th>
       </tr>
       </thead>
       <tbody *ngFor="let item of allObject; index as i">
       <tr>
-        <th scope="row">{{item.coverBookId}}</th>
-        <td *ngIf="enableEditIndex!=i">{{item.coverBookName}}</td>
+        <th scope="row">{{item.translationId}}</th>
+        <td *ngIf="enableEditIndex!=i">{{item.translationName}}</td>
         <td *ngIf="enableEditIndex==i" class="active" contenteditable="true">
-          <input type="text" class="form-control" placeholder="{{item.coverBookName}}"
-                 [(ngModel)]="updateThisObject.coverBookName">
+          <input type="text" class="form-control" placeholder="{{item.translationName}}"
+                 [(ngModel)]="updateThisObject.translationName">
         </td>
         <td *ngIf="enableEditIndex!=i" class="col-md-1 edit" (click)="enableEditMethod($event, i)">Изменить</td>
         <td *ngIf="enableEditIndex==i" class="col-md-1 cancel" (click)="cancel()">Отменить</td>
-        <td (click)="rememberIdDelete(item.coverBookId)" data-bs-toggle="modal" data-bs-target="#exampleModal"
+        <td (click)="rememberIdDelete(item.translationId)" data-bs-toggle="modal" data-bs-target="#exampleModal"
             *ngIf="enableEditIndex!=i" class="col-md-1 delete">Удалить
         </td>
-        <td *ngIf="enableEditIndex==i" class="col-md-1 save" (click)="updateObject(item.coverBookId)">Сохранить</td>
+        <td *ngIf="enableEditIndex==i" class="col-md-1 save" (click)="updateObject(item.translationId)">Сохранить</td>
 
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog">
