--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,14 +45,14 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a routerLinkActive="active" routerLink="/create-book" class="dropdown-item" href="#">Добавить книгу</a></li>
             <li><a routerLinkActive="active" routerLink="/create-authors" class="dropdown-item" href="#">Добавить автора</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/genre/list" class="dropdown-item" href="#">Жанры</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/age-limit/list" class="dropdown-item" href="#">Возрастные ограничения</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/translation" class="dropdown-item" href="#">Перевод книг</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/genre/list" class="dropdown-item" href="#">Жанры+</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/age-limit/list" class="dropdown-item" href="#">Возрастные ограничения +</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/translation" class="dropdown-item" href="#">Перевод книг + </a></li>
             <li><a routerLinkActive="active" routerLink="/book/series" class="dropdown-item" href="#">Серия книг</a></li>
             <li><a routerLinkActive="active" routerLink="/book/rent" class="dropdown-item" href="#">Список в аренде</a></li>
             <li><a routerLinkActive="active" routerLink="/book/rent-add" class="dropdown-item" href="#">Выдать в аренду</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/create-price" class="dropdown-item" href="#">Стоимость аренды</a></li>
-            <li><a routerLinkActive="active" routerLink="/book/cover-type" class="dropdown-item" href="#">Виды обложек</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/price-rent" class="dropdown-item" href="#">Стоимость аренды +-</a></li>
+            <li><a routerLinkActive="active" routerLink="/book/cover-type" class="dropdown-item" href="#">Виды обложек+</a></li>
             <li><a routerLinkActive="active" routerLink="/book/publisher" class="dropdown-item" href="#">Издательства</a></li>
             <li><a routerLinkActive="active" routerLink="/book/edition-language" class="dropdown-item" href="#">Язык издания</a></li>
           </ul>
